# tiktokify

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hf.yml
src/tiktokify/: __init__.py  __main__.py  cli.py
src/tiktokify/crawler/: __init__.py  blog_crawler.py
src/tiktokify/enrichment/: __init__.py  base.py  llm_enricher.py
src/tiktokify/enrichment/providers/: __init__.py  hackernews.py  links.py  wikipedia.py
src/tiktokify/filters/: __init__.py  base.py  content_filter.py  url_filter.py
src/tiktokify/generator/: __init__.py  html_generator.py
src/tiktokify/generator/templates/: swipe.html.jinja2
src/tiktokify/models/: __init__.py  post.py
src/tiktokify/recommender/: __init__.py  base.py  embeddings.py  engine.py  metadata.py  tfidf.py
src/tiktokify/relevancy/: __init__.py  classifier.py  patterns.py
tests/: __init__.py  test_filters.py
